cmake_minimum_required(VERSION 2.8)

add_executable(tvguid01 tvguid01.cc)
target_link_libraries(tvguid01 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid02 tvguid02.cc)
target_link_libraries(tvguid02 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid03 tvguid03.cc)
target_link_libraries(tvguid03 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid04 tvguid04.cc)
target_link_libraries(tvguid04 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid05 tvguid05.cc)
target_link_libraries(tvguid05 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid06 tvguid06.cc)
target_link_libraries(tvguid06 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid07 tvguid07.cc)
target_link_libraries(tvguid07 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid08 tvguid08.cc)
target_link_libraries(tvguid08 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid09 tvguid09.cc)
target_link_libraries(tvguid09 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid10 tvguid10.cc)
target_link_libraries(tvguid10 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid11 tvguid11.cc)
target_link_libraries(tvguid11 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid12 tvguid12.cc)
target_link_libraries(tvguid12 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid13 tvguid13.cc)
target_link_libraries(tvguid13 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid14 tvguid14.cc)
target_link_libraries(tvguid14 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid15 tvguid15.cc)
target_link_libraries(tvguid15 rhtv ${CURSES_LIBRARIES})
add_executable(tvguid16 tvguid16.cc)
target_link_libraries(tvguid16 rhtv ${CURSES_LIBRARIES})
